--- a/src/app/base-layout/base-layout.component.html
+++ b/src/app/base-layout/base-layout.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo"></div>
-      <img src="../assets/gpa-calculator-app.png" height="80" />
+      <img src="./assets/gpa-calculator-app.png" height="80" />
     <div style="width: 80%">
       <div fxLayout="row wrap" fxLayoutAlign="end start">
         <button mat-button routerLink="/">Home</button>
